@@ -217,6 +217,10 @@ let file_kind_of_name name =
   else raise (Arg.Bad ("don't know what to do with " ^ name))
 ;;
 
+let print_version_string () =
+  print_string Pcaml.version; print_newline (); exit 0
+;;
+
 let print_version () =
   eprintf "Camlp4 version %s\n" Pcaml.version; flush stderr; exit 0
 ;;
@@ -333,7 +337,9 @@ let initial_spec_list =
    "<file> Dump quotation expander result in case of syntax error.";
    "-o", Arg.String (fun x -> Pcaml.output_file := Some x),
    "<file> Output on <file> instead of standard output.";
-   "-v", Arg.Unit print_version, "Print Camlp4 version and exit."]
+   "-v", Arg.Unit print_version, "Print Camlp4 version and exit.";
+   "-version", Arg.Unit print_version_string,
+   "Print Camlp4 version number and exit."]
 ;;
 
 let anon_fun x = Pcaml.input_file := x; file_kind := file_kind_of_name x;;
